FILE(GLOB_RECURSE TEST_SRC_FILES *.cpp *.cc *.c)
SET(TEST_TARGET ${PROJECT_NAME}_test)
ADD_EXECUTABLE(${TEST_TARGET} ${TEST_SRC_FILES})

#FIND_LIBRARY(LIB_DGFACE NAMES dgface PATHS ${PROJECT_SOURCE_DIR}/dist/${PLATFORM})
FIND_LIBRARY(LIB_DGFACE NAMES dgface PATHS ${PROJECT_SOURCE_DIR}/build/src)
#LIST(APPEND ALL_SRC_FILES ${LIBS} ${LIB_DGFACE})
#LIST(APPEND ALL_SRC_FILES ${LIBS} )
TARGET_LINK_LIBRARIES(${TEST_TARGET} ${LIB_DGFACE} ${LIBS} )
#ADD_TEST(${TEST_TARGET} ${TEST_TARGET} test_list.txt ./)

SET(RELEASE_TEST ${PROJECT_SOURCE_DIR}/release/test)
INSTALL(TARGETS ${TEST_TARGET} RUNTIME DESTINATION ${RELEASE_TEST})
INSTALL(FILES ${PROJECT_SOURCE_DIR}/test/config.txt ${PROJECT_SOURCE_DIR}/test/test_list.txt DESTINATION ${RELEASE_TEST})
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/test/images DESTINATION ${RELEASE_TEST})
