FILE(GLOB_RECURSE TEST_SRC_FILES *.cpp *.cc *.c)
#SET(TEST_TARGET ${PROJECT_NAME}_test)
FIND_LIBRARY(LIB_DGFACE NAMES dgface PATHS ${PROJECT_SOURCE_DIR}/build/src)
foreach(test_src ${TEST_SRC_FILES})
	GET_FILENAME_COMPONENT(ONE_TEST_TARGET ${test_src} NAME_WE)
	ADD_EXECUTABLE(${ONE_TEST_TARGET} ${test_src})
	TARGET_LINK_LIBRARIES(${ONE_TEST_TARGET} dgface ${LIBS})
endforeach(test_src)
#ADD_EXECUTABLE(${TEST_TARGET} ${TEST_SRC_FILES})

#FIND_LIBRARY(LIB_DGFACE NAMES dgface PATHS ${PROJECT_SOURCE_DIR}/dist/${PLATFORM})
#LIST(APPEND ALL_SRC_FILES ${LIBS} ${LIB_DGFACE})
#LIST(APPEND ALL_SRC_FILES ${LIBS} )
#TARGET_LINK_LIBRARIES(${TEST_TARGET} ${LIB_DGFACE} ${LIBS} )
#ADD_TEST(${TEST_TARGET} ${TEST_TARGET} test_list.txt ./)

SET(RELEASE_TEST ${PROJECT_SOURCE_DIR}/release/test)
INSTALL(TARGETS test_main RUNTIME DESTINATION ${RELEASE_TEST})
INSTALL(FILES ${PROJECT_SOURCE_DIR}/test/test_main.cpp ${PROJECT_SOURCE_DIR}/test/test_list.txt DESTINATION ${RELEASE_TEST})
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/test/images DESTINATION ${RELEASE_TEST})
