cmake_minimum_required(VERSION 2.8)
PROJECT(watchdog)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG " $ENV{CXXFLAGS} -DDEBUG -O3 -w -g -ggdb")

#SET(CMAKE_BUILD_TYPE "Release")
#SET(CMAKE_CXX_FLAGS_RELEASE " ${CXXFLAGS} -O3 -w")

SET(PLATFORM ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

FIND_LIBRARY(LIB_SAFENET NAMES hasp PATHS lib/safenet/${PLATFORM} )

INCLUDE_DIRECTORIES(include src src/include)
LIST(APPEND LIBS pthread ${LIB_SAFENET} glog crypto)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
#ADD_SUBDIRECTORY(example)
