file(GLOB_RECURSE SRC_FILES *.cpp *.c *.cc)
file(GLOB_RECURSE SRC_FILES_grpc "../../imodel/src/cpp/*.cc")

LIST(APPEND SRC_FILES ${SRC_FILES_grpc})

SET(CMAKE_INSTALL_RPATH ./libs)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_executable(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} ${LIBS})

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/)
FILE(GLOB_RECURSE RUNTIME_LIBS ${CONAN_LIB_DIRS_DGCAFFE}/${PLATFORM}/* ${CONAN_LIB_DIRS_MXNET}/${PLATFORM}/* ${CONAN_LIB_DIRS_GRPC}/${PLATFORM}/* ${CONAN_LIB_DIRS_GRPCPP}/${PLATFORM}/* ${CONAN_LIB_DIRS_PROTOBUF}/${PLATFORM}/* ${CONAN_LIB_DIRS_DGVEHICLE}/${PLATFORM}/* ${CONAN_LIB_DIRS_DGLP}/${PLATFORM}/* ${CONAN_LIB_DIRS_MXNET}/${PLATFORM}/*)
install(FILES ${RUNTIME_LIBS} DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/libs)
