#AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(alg SRC_ALG)
AUX_SOURCE_DIRECTORY(engine SRC_ENGINE)
AUX_SOURCE_DIRECTORY(io SRC_IO)
AUX_SOURCE_DIRECTORY(model SRC_MODEL)
AUX_SOURCE_DIRECTORY(network SRC_NETWORK)
AUX_SOURCE_DIRECTORY(processor SRC_PROCESSOR)
AUX_SOURCE_DIRECTORY(vis SRC_VIS)

LIST(APPEND SRC_LIST ${SRC_ALG} ${SRC_ENGINE} ${SRC_IO} ${SRC_MODEL} ${SRC_NETWORK} ${SRC_PROCESSOR} ${SRC_VIS})

#ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST})
#ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST})


TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS})

#INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
